# AI-Research-Desk

./: .gitignore
research-desk/: .env.example  CLAUDE.md  Makefile  PROGRESS.md  README.md  SPEC.md  pyproject.toml
research-desk/.claude/skills/research-desk-conventions/: SKILL.md
research-desk/src/research_desk/: __init__.py  app.py  backtest.py  cli.py  config.py  db.py  debate.py  diff.py  extract.py  ingest.py  llm.py  score.py  thesis.py  transcripts.py
research-desk/tests/: test_app.py  test_backtest.py  test_cli.py  test_config.py  test_debate.py  test_diff.py  test_extract.py  test_ingest.py  test_score.py  test_thesis.py  test_transcripts.py
